kakao,naver success

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
+    <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script><!--NAVER LOGIN API-->
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js" integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx" crossorigin="anonymous"></script><!--KAKAO LOGIN API-->
+    <script src="https://accounts.google.com/gsi/client" async defer></script><!--GOOGLE LOGIN API-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="referrer" content="no-referrer-when-downgrade">
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
